# newton-jetson-software

./: .clangd  .docker-compose.yml.swp  .gitconfig  .gitignore  .gitmodules  .viminfo  CMakeList.txt  CMakeLists.txt  LICENSE  README.md  build.sh  docker-compose.yml  install.sh  joint_efforts.csv  joint_positions.csv  logic.c  main.c  main.cpp  newer.py  newpy  newton  newton.py  package.xml  setup.sh  source_all.sh  spi.h  start.sh  test.c
.devcontainer/: Dockerfile  devcontainer.json
.dotnet/corefx/cryptography/crls/: d16da424.cbeb964c.crl
.github/workflows/: todo.yaml
.gnupg/: pubring.kbx  trustdb.gpg
.local/share/CMakeTools/: cmake-tools-kits.json  log.txt
bringup/: config.json  flat_endpoints.json  set_config.py  startup.py
build-kit/: readME.md  requirements.txt
build-kit/scripts/: __init__.py  build.py  build_config.py  cli.py  package_builder.py  packages.py  shell.py  system_info.py  version.py
build_kit/: cli.py  container.py  package.py  package_builder.py  packages.py
communication/: CMakeLists.txt  handler.h  message.h  spi.c  transport.h  uart.cpp  uart.h
communication/include/: base_msg.h  handler.h  message.h  motor_msg.h  serial_config.h  uart.h  udp_server.h
communication/src/: base_msg.cpp  motor_msg.cpp  uart.cpp
configs/: newton.yaml
core/: CMakeLists.txt  main.cpp  package.xml
core/launch/: newton.launch.py
core/src/controller/: CMakeLists.txt
core/src/controller/include/controller/: onnx.h
core/src/motor_driver/: CMakeLists.txt  package.xml
core/src/motor_driver/include/: motor.h  types.h
core/src/motor_driver/src/: main.cpp  motor.cpp
core/src/parameters/: package.xml
core/src/parameters/launch/: params.launch.py
core/src/parameters/src/: parameters.cpp
core/src/utils/: CMakeLists.txt
core/src/utils/include/: logger.h  result.h
docker/: Dockerfile.aarch_64  Dockerfile.x86_64  Dockerfile.x86_64.dev  requirements.txt
docker/scripts/: bashrc  newton_entrypoint.sh  vimrc
launch/: newton.launch.py
lib/install/: local_setup.sh  setup.sh
lib/install/odrive_can/share/odrive_can/: local_setup.sh  package.sh
lib/install/odrive_can/share/odrive_can/cmake/: export_odrive_can__rosidl_generator_cExport-noconfig.cmake  export_odrive_can__rosidl_generator_cExport.cmake  export_odrive_can__rosidl_generator_cppExport.cmake  export_odrive_can__rosidl_generator_pyExport-noconfig.cmake  export_odrive_can__rosidl_generator_pyExport.cmake  export_odrive_can__rosidl_typesupport_fastrtps_cExport-noconfig.cmake  export_odrive_can__rosidl_typesupport_fastrtps_cExport.cmake  export_odrive_can__rosidl_typesupport_fastrtps_cppExport-noconfig.cmake  (+9 more)
lib/log/: latest_build
modules/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
modules/install/odrive_motor/include/: motor.h
modules/install/odrive_motor/lib/odrive_motor/: odrive_motor_node
modules/install/odrive_motor/share/odrive_motor/: local_setup.dsv  local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
modules/launch/: netwon_launch.py
modules/log/: latest_build
modules/src/imu/config/: params.yaml
modules/src/motor/: CMakeLists.txt  package.xml
modules/src/motor/include/: motor.h  types.h
modules/src/motor/launch/: motors.launch.py
modules/src/motor/src/: main.cpp  motor.cpp
modules/src/parameters/: CMakeLists.txt
src/launch/: newton.launch.py
src/n_controller/: CMakeLists.txt  package.xml
src/n_controller/config/: onnx.yaml  params.yaml
src/n_controller/include/: globals.h
src/n_controller/include/data/: cmd.h  gait_type.h  imu.h  joint.h  vectors.h
src/n_controller/include/gaits/: GaitManager.h  base_gait.h  gait_manager.h  harmonic_gait.h  ik_gait.h  machine_gait.h  sliding_gait.h  standing.h  standing_gait.h  walking_gait.h
src/n_controller/include/handlers/: ik_handler.h  onnx_handler.h
src/n_controller/launch/: motors.launch.py
src/n_controller/models/: mode_alt_700.onnx  model.onnx  model_300.onnx  model_700.onnx
src/n_controller/src/: controller_node.cpp  main.cpp  onnx.cpp
src/n_controller/src/gaits/: base_gait.cpp  gait_manager.cpp  harmonic_gait.cpp  ik_gait.cpp  machine_gait.cpp  sliding_gait.cpp  standing.cpp  standing_gait.cpp  walking_gait.cpp
src/n_controller/src/handlers/: ik_handler.cpp  onnx_handler.cpp
src/n_imu/: CMakeLists.txt  package.xml
src/n_imu/config/: params.yaml
src/n_imu/include/tm_imu/: tm_imu_node.hpp
src/n_imu/launch/: imu.launch.py
src/n_imu/src/: tm_imu_node.cpp
src/n_influx/: package.xml  setup.cfg  setup.py
src/n_influx/n_influx/: n_influx_node.py
src/n_inputs/: CMakeLists.txt  package.xml
src/n_inputs/include/data/: vectors.h
src/n_inputs/include/nodes/: gamepad_node.h  keyboard_node.h
src/n_inputs/launch/: gamepad.launch.py  inputs.launch.py  keyboard.launch.py
src/n_inputs/src/: gamepad_entry.cpp  keyboard_entry.cpp
src/n_inputs/src/nodes/: gamepad_node.cpp  keyboard_node.cpp
src/n_motor_controller/: CMakeLists.txt
src/n_motor_controller/include/: harmonic_gait.h  joint.h  motor.h  types.h
src/n_motor_controller/include/brains/: onnx.h
src/n_motor_controller/include/data/: imu.h  joint.h
src/n_motor_controller/include/gaits/: base_gait.h  harmonic_gait.h  machine_gait.h
src/n_motor_controller/launch/: motors.launch.py
src/n_motor_controller/src/: harmonic_gait.cpp  main.cpp  motor.cpp
src/n_motor_controller/src/brains/: onnx.cpp
src/n_motor_controller/src/gaits/: base_gait.cpp  harmonic_gait.cpp  machine_gait.cpp
src/odrive/odrive/: can_interface.py  closed_loop.py  device.py  device_manager.py  discoverer.py  enumerate.py  exception.py  odrive_node.py
tests/: CMakeLists.txt  logger.cpp
tests/utils/: test_logger.cpp  test_message.cpp  test_result.cpp  test_timer.cpp
utils/: CMakeLists.txt  config.h  logger.hpp  result.cpp  result.h
utils/diagnostics/: message_diagnostics.h
utils/include/: logger.h  logger.hpp  result.h  timer.h  types.h  unit.h
utils/src/: dummy.cpp  logger.cpp  timer.cpp
utils/tests/: CMakeLists.txt  test_logger.cpp
(+3 files in other folders)
