<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format2.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="2">
  <name>n_motor_controller</name>
  <version>0.1.0</version>
  <description> Hardware abstraction layer for motor control</description>
  <maintainer email="thenewtoncapston@gmail.com">Aditya Pande</maintainer>

  <license>Apache License 2.0</license>

  <author email="shamiivan@gmail.com">Shami Ivan</author>
  <author email="shamiivan@gmail.com">Augusto Mota Pinheiro</author>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rlccpp</depend>
  <depend>rclcpp_components</depend>
  <depend>std_msgs</depend>
  <depend>odrive_can</depend>
  <depend>std_srvs</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>